<?xml version="1.0" encoding='UTF-8'?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd" schematypens="https://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pelco_d_control</name>
  <version>0.0.1</version>
  <description>The pelco_d_control package</description>

  <maintainer email="ian@forssea-robotics.fr">Ian McElroy</maintainer>

  <license>TODO</license>
  <author email="ian@forssea-robotics.fr">Ian McElroy</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
